# conda-wasm

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pixi.toml
.github/: dependabot.yml
.github/workflows/: docs.yml
conda-emscripten/: pyproject.toml
conda-emscripten/conda_emscripten/: __init__.py  extractor.py  magic.py  patches.py  plugin.py  solver.py
crates/conda-wasm/: Cargo.toml  build.rs
crates/conda-wasm/src/: bootstrap.rs  error.rs  extract.rs  gateway.rs  lib.rs  sharded.rs  solve.rs
crates/conda-wasm/www/: .gitignore  conda-test.html  conda-wasm-bootstrap.js  conda-wasm-worker.js
crates/cx-wasm/: Cargo.toml  build.rs
crates/cx-wasm/src/: bootstrap.rs  error.rs  extract.rs  gateway.rs  lib.rs  sharded.rs  solve.rs
crates/cx-wasm/www/: .gitignore  conda-test.html  cx-bootstrap.js  cx-worker.js  index.html  serve.py
cx-jupyterlite/: package.json  tsconfig.json
cx-jupyterlite/src/: index.ts  kernel.ts
cx-jupyterlite/style/: index.css
demo/: build.py  empack_config.yaml  jupyter-lite.json  jupyter_lite_config.json  overrides.json
docs/: conf.py  index.md  robots.txt
docs/_static/css/: custom.css
docs/explanation/: architecture.md  project-scope.md
docs/guides/: browser.md
docs/how-to/: build-local-demo.md  use-conda-in-notebook.md
docs/reference/: browser-runtime.md  conda-plugin.md  python-runtime-package.md  repository-layout.md
docs/tutorials/: try-browser-demo.md
jupyterlite/: package.json
jupyterlite/src/: index.ts  kernel.ts
jupyterlite/style/: index.css
lite/: .gitignore  build.py  environment.yml  jupyter_lite_config.json
lite/files/notebooks/: conda-express-demo.ipynb
python/: pyproject.toml
python/conda_wasm/: __init__.py  diagnostics.py
python/conda_wasm/magic/: __init__.py  command.py  prefix.py  shared_libs.py
python/conda_wasm/plugin/: __init__.py  extractor.py  patches.py  solver.py
python/conda_wasm/plugin/compat/: __init__.py  download.py  extract.py  notices.py  repodata.py  subprocess.py  timing.py  urllib3.py
python/conda_wasm/runtime/: __init__.py  assets.py  globals.py  loader.py  prefetch.py  state.py
recipes/conda/: CONDA_INSTALL_POC.md
recipes/conda-emscripten/: AUDIT.md  CONDA_INSTALL_POC.md  recipe.yaml
recipes/conda-emscripten-plugin/: recipe.yaml
recipes/conda-emscripten/lockfile-env/: pixi.toml
recipes/conda-wasm/: recipe.yaml
recipes/cx-wasm-kernel/: pyproject.toml  recipe.yaml
recipes/frozendict-noarch/: recipe.yaml
(+27 files in other folders)
