[package]
name = "cx-wasm"
version = "0.1.0"
edition = "2024"
description = "Unified WASM module for conda in the browser: bootstrap, solve, and extract"
license = "BSD-3-Clause"
repository = "https://github.com/jezdez/conda-express"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rattler_conda_types = { version = "0.44", default-features = false }
rattler_lock = { version = "0.27", default-features = false }
rattler_solve = { version = "5.0", default-features = false, features = ["resolvo"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "AbortController",
    "AbortSignal",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Window",
] }
zip = { version = "2", default-features = false, features = ["deflate"] }
ruzstd = "0.8"
rmp-serde = "1"
bzip2-rs = "0.1"
tar = { version = "0.4", default-features = false }
serde-wasm-bindgen = "0.6"
serde_bytes = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
